# arrow_flight_sql_benchmark

./: .gitignore  docker-compose.yml
cpp_adbc/: CMakeLists.txt  Dockerfile  main.cpp
cpp_odbc/: Dockerfile
cpp_odbc/odbc/: odbc.ini  odbcinst.ini
cpp_odbc/testodbc/: CMakeLists.txt  main.cpp
java_adbc/: Dockerfile  dependency-reduced-pom.xml  pom.xml
java_adbc/src/main/java/org/example/: Main.java
java_jdbc/: Dockerfile  OracleLog.properties  dependency-reduced-pom.xml  pom.xml
java_jdbc/src/main/java/de/bachmaiers/: Main.java
simple_flight_sql_server/: CMakeLists.txt  Dockerfile  docker-compose.yml
simple_flight_sql_server/tools/server/: CMakeLists.txt  simple_flight_sql_server.cpp  simple_flight_sql_server.h
